--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,14 @@ services:
     build:
       context: ./services/midi_service
     ports:
-      - "5002:5002"
+      - "5000:5000"
     volumes:
       - ./static/uploads:/app/uploads
+
+  upload_service:
+      build:
+        context: ./services/upload_service
+      ports:
+        - "5002:5002"
+      volumes:
+        - ./static/uploads:/app/uploads
